fixed spacing issue for right UI Block

--- a/kakilang-web-app/src/App.css
+++ b/kakilang-web-app/src/App.css
@@ -51,7 +51,7 @@
 
   position: sticky;
 
-  padding: 1%;
+  
   width: 100%;
 }
 
